--- a/NTTourGuide/Base.lproj/Main.storyboard
+++ b/NTTourGuide/Base.lproj/Main.storyboard
@@ -661,25 +661,83 @@
             </objects>
             <point key="canvasLocation" x="373" y="763"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="xvs-F8-SKm">
+        <!--Map View Controller-->
+        <scene sceneID="Spo-H3-4Vs">
             <objects>
-                <viewController id="AH0-NY-d9u" sceneMemberID="viewController">
+                <viewController id="ULl-ot-oFe" customClass="MapViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ERx-kT-v4a"/>
-                        <viewControllerLayoutGuide type="bottom" id="cxu-7K-8U9"/>
+                        <viewControllerLayoutGuide type="top" id="LeY-fA-TMb"/>
+                        <viewControllerLayoutGuide type="bottom" id="gJX-Y7-lz5"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="OVy-T0-Kti">
+                    <view key="view" contentMode="scaleToFill" id="mlY-FK-lPV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qkP-d6-UVe">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="gzG-Hg-Dqa">
+                                        <barButtonItem key="rightBarButtonItem" id="bgL-pN-ZD7">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="cgJ-mY-wMM">
+                                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Direction">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="Direction:" destination="ULl-ot-oFe" eventType="touchUpInside" id="e3P-Od-JGz"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VD7-0b-FbN">
+                                <rect key="frame" x="0.0" y="475" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" id="wER-xD-1IK">
+                                        <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="avq-Wi-VuO">
+                                            <rect key="frame" x="16" y="6" width="206" height="32"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="Standard"/>
+                                                <segment title="Satelite"/>
+                                                <segment title="Hybrid"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="setMap:" destination="ULl-ot-oFe" eventType="valueChanged" id="ceb-We-1zl"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </barButtonItem>
+                                    <barButtonItem id="vbw-aj-yCD">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Ytj-Do-hpa">
+                                            <rect key="frame" x="232" y="7" width="60" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" title="Location">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="GetLocation:" destination="ULl-ot-oFe" eventType="touchUpInside" id="NhC-0s-q21"/>
+                                            </connections>
+                                        </button>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="E1d-ds-0cu"/>
+                                </items>
+                            </toolbar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JWJ-fl-oAF">
+                                <rect key="frame" x="0.0" y="64" width="320" height="411"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="featured" id="lGs-nI-h8I"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="oy1-tt-JZe"/>
+                    <connections>
+                        <outlet property="mapview" destination="JWJ-fl-oAF" id="S5Y-qm-8uR"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qeP-EM-J8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0GD-Jk-h9f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-845" y="-585"/>
+            <point key="canvasLocation" x="-871" y="-573.5"/>
         </scene>
         <!--Home-->
         <scene sceneID="ufC-wZ-h7g">
@@ -776,7 +834,7 @@
                     <connections>
                         <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="Irv-Q2-o6T"/>
                         <segue destination="K8F-z9-XvK" kind="relationship" relationship="viewControllers" id="hZ7-pf-LNU"/>
-                        <segue destination="AH0-NY-d9u" kind="relationship" relationship="viewControllers" id="IJU-fe-YHv"/>
+                        <segue destination="ULl-ot-oFe" kind="relationship" relationship="viewControllers" id="iH9-ww-dLs"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N7O-qE-1DO" userLabel="First Responder" sceneMemberID="firstResponder"/>
